--- a/style.css
+++ b/style.css
@@ -5,11 +5,52 @@
 }
 body{
     overflow-x: hidden;
+    background-color: black;
+}
+
+nav{
+    display: flex;
+    background-color: brown;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 50px;
+    cursor: pointer;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+nav h1{
+    font-size: 35px;
+    color: rgb(230, 215, 205);
+    font-weight: 900;
+}
+.nav-part2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+}
+.nav-part2 h4{
+    font-weight: 100;
+    color:antiquewhite;
 }
 .page1{
+    display: flex;
     height: 100vh;
     width: 100%;
     background-color: antiquewhite;
+    justify-content: center;
+    align-items: center;
+}
+.page1 h1{
+    font-size: 100px;
+    color: brown;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+.custom_cursor{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: red;
+    position: fixed;
 }
 .page2{
     height: 100vh;
