--- a/style.css
+++ b/style.css
@@ -9,12 +9,15 @@ body{
 }
 
 nav{
+    position: fixed;
+    width: 100vw;
     display: flex;
     background-color: brown;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 50px;
+    padding: 20px 50px;
     cursor: pointer;
+    transition: top 0.6s;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 nav h1{
@@ -27,6 +30,7 @@ nav h1{
     justify-content: center;
     align-items: center;
     gap: 25px;
+    margin-right: 100px;
 }
 .nav-part2 h4{
     font-weight: 100;
