--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ nav{
     padding: 20px 50px;
     transition: top 0.6s;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    z-index: 10;
 }
 nav img{
     cursor: pointer;
@@ -111,8 +112,52 @@ video {
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
+.custom_cursor{
+    height: 100vh;
+    width: 100%;
+    /* background-color: #111; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.custom_cursor .left{
+    width: 50%;
+    height: 70vh;
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    align-items: start;
+    color: #fffeb8;
+    flex-direction: column;
+    font-size: 40px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    z-index: 0;
+}
 
 
+.custom_cursor .right{
+    position: relative;
+    top: 10%;
+    gap: 15px;
+    width: 30%;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    color: #fffeb8;
+    font-size: 40px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    z-index: 1;
+}
+.cursor{
+    height: 20px;
+    width: 20px;
+    background-color: white;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 2;
+}
 
 
 #svg{
