--- a/style.css
+++ b/style.css
@@ -4,10 +4,15 @@
     0;
 
 }
+::-webkit-scrollbar {
+    width: 0px;
+  }
+  
+
 body{
     overflow-x: hidden;
     background-color: black;
-    @import url('https://fonts.googleapis.com/css2?family=Damion&display=swap');
+    @import url("https://fonts.googleapis.com/css2?family=Damion&display=swap");
 
 }
 
